<resources>
    <string name="app_name">CarApp</string>
    <string name="hello_text">Здравствуйте! Какую машину желаете приобрести?</string>
    <string name="hello_hint">Введите название машины</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_authorization">Авторизация</string>
    <string name="hint_input_login">Введите логин</string>
    <string name="hint_input_pass">Введите пароль</string>
    <string name="text_enter">Войти</string>
    <string name="person_name">Игорь Коршев</string>
    <string name="line">____________________________________</string>
    <string name="person_info">Персональная информация</string>
    <string name="notification">Уведомления</string>
    <string name="save">Сохраненные</string>
    <string name="search">Поиск</string>
    <string name="top_of_the_bmw">BMW M5 G90 Compitition</string>
</resources>