<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".activity.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/HelloText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="70sp"
        android:text="@string/hello_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/CarName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/HelloText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/hello_hint"
        android:inputType="textPersonName"
        android:textSize="15dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CarName"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="15dp" />
</RelativeLayout>